feat: update product color handling to support multiple colors and adjust related components